# libpowenetics

./: .gitignore  CMakeLists.txt  LICENCE  README.md  azure-pipelines.yml
cclient/: CMakeLists.txt  cclient.c
excellentpowenetics/: CMakeLists.txt  cmd_line.cpp  cmd_line.h  excel_output.cpp  excel_output.h  excel_output.inl  excel_worker.cpp  excel_worker.h  excellentpowenetics.cpp
libpowenetics/: CMakeLists.txt
libpowenetics/include/libpowenetics/: api.h  linuxhresult.h  linuxsal.h  nocom.h  nosal.h  operation_mode.h  powenetics.h  sample.h  serial.h  timestamp.h  types.h
libpowenetics/src/: commands.h  convert.cpp  convert.h  debug.h  device.cpp  device.h  endian.h  magic_auto_lock.h  main.cpp  powenetics.cpp  probe.cpp  probe.h  responses.h  serial.cpp  stream_parser_v2.cpp  stream_parser_v2.h  stream_parser_v2.inl  stream_state.h  thread_name.cpp  thread_name.h  timestamp.cpp
tests/: CMakeLists.txt  convert.cpp  endian.cpp  probe.cpp  serial.cpp  timestamp.cpp
